--- a/app/src/main/res/layout/record_crash.xml
+++ b/app/src/main/res/layout/record_crash.xml
@@ -1,35 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/recordcrash_text_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="#DDDDDD"
-        android:text="충돌"
-        android:textAlignment="center"
-        android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/recordcrash_text_content"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/recordcrash_text_title"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="10dp"
-        android:textSize="20dp"
-        android:text="TextView" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="350dp"
+    android:layout_height="wrap_content">
 
     <VideoView
         android:id="@+id/recordcrash_videoView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/recordcrash_text_title"
-        android:layout_toRightOf="@+id/recordcrash_text_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"/>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/recordcrash_text_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="20dp"
+        android:text="TextView" />
+
+
+</LinearLayout>
