--- a/app/src/main/res/layout/standard_main.xml
+++ b/app/src/main/res/layout/standard_main.xml
@@ -1,40 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="350dp"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/standard_text_setting"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="#DDDDDD"
-        android:text="기준점 설정"
-        android:textAlignment="center"
-        android:textSize="20dp" />
+        android:layout_height="match_parent"
+        android:background="@color/colorBackground"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/standard_text_retry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="기준점을 다시 맞추고 싶은 경우 아래 버튼을 눌러주세요"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/standard_text_retry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="기준점을 다시 맞추고 싶은 경우"
+            android:textSize="20dp"
+            android:background="@color/colorBackground"/>
 
-    <ImageView
-        android:id="@+id/standard_image_camera"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginTop="5dp" />
+        <TextView
+            android:id="@+id/standard_text_retry2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="[다시 촬영] 버튼을 눌러주세요"
+            android:textSize="20dp"
+            android:background="@color/colorBackground"/>
 
-    <Button
-    android:id="@+id/standard_btn_test"
-    android:layout_width="100dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_gravity="center"
-    android:text="다시 촬영" />
+        <ImageView
+            android:id="@+id/standard_image_camera"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="@color/colorBackground"
+            android:layout_marginTop="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorBackground">
+
+            <Button
+                android:id="@+id/standard_btn_test"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="다시 촬영"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/standard_btn_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="닫기"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </LinearLayout>
