--- a/app/src/main/res/layout/record_drive.xml
+++ b/app/src/main/res/layout/record_drive.xml
@@ -2,18 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBackgroundDark"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="운전 점수"
+        android:textSize="20dp"
+        android:gravity="center"/>
 
     <com.github.mikephil.charting.charts.BarChart
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.3"
-        android:id="@+id/recorddrive_barchart"/>
+        android:layout_marginTop="15dp"
+        android:id="@+id/recorddrive_barchart"
+        android:background="@color/colorBackground"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.7"
+        android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:id = "@+id/recorddrive_layout_score">
 
