--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorBackgroundDark">#f0f0f0</color>
+    <color name="colorTextDark">#000000</color>
 
 <!--    <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
