--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -1,64 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/alarm_text_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Alarm Item List"
+        android:textSize="20dp"
+        android:textColor="@color/colorTextDark"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/alarm_text_itemdesc"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Description"
+        android:textSize="15dp"
+        android:layout_below="@+id/alarm_text_item"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"/>
 
-            <TextView
-                android:id="@+id/alarm_text_item"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:text="Alarm Item List"
-                android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp" />
+    <CheckBox
+        android:id="@+id/alarm_chk_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="15dp"
+        android:paddingRight="30dp"/>
 
-            <CheckBox
-                android:id="@+id/alarm_chk_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="right"
-                android:layout_marginLeft="15dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/alarm_text_itemdesc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="desc"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="15dp"
-                android:textSize="15dp"
-                android:layout_weight="0.2"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.8"/>
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
