--- a/app/src/main/res/layout/capture_item.xml
+++ b/app/src/main/res/layout/capture_item.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:text="Capture Item List"
         android:textSize="20dp"
+        android:textColor="@color/colorTextDark"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"/>
