--- a/app/src/main/res/layout/record_log_date.xml
+++ b/app/src/main/res/layout/record_log_date.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:gravity="center"
+        android:textColor="@color/colorTextDark"
         android:layout_marginLeft="10dp"
         android:textSize="20dp"/>
 
