--- a/app/src/main/res/layout/resolution_item.xml
+++ b/app/src/main/res/layout/resolution_item.xml
@@ -7,8 +7,9 @@
         android:id="@+id/resol_text_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ddddddddd"
+        android:text="Resolution Title"
         android:textSize="20dp"
+        android:textColor="@color/colorTextDark"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"/>
