--- a/app/src/main/res/layout/setting_main.xml
+++ b/app/src/main/res/layout/setting_main.xml
@@ -1,59 +1,252 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/setting_btn_alarm"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="120dp"
-        android:layout_centerHorizontal="true"
-        android:text="알림" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:background="@color/colorBackgroundDark"
+        android:scrollbars="vertical">
 
-    <Button
-        android:id="@+id/setting_btn_sensitivity"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/setting_btn_alarm"
-        android:text="민감도" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
-    <Button
-        android:id="@+id/setting_btn_standard"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/setting_btn_sensitivity"
-        android:text="기준점" />
+            <TextView
+                android:id="@+id/set_text_alarm"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="알림"
+                android:gravity="center"
+                android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/setting_btn_record"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/setting_btn_standard"
-        android:text="기록" />
+            <ListView
+                android:id="@+id/set_listview_alarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBackground"
+                android:layout_below="@+id/set_text_alarm" />
 
-    <Button
-        android:id="@+id/setting_btn_capture"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/setting_btn_record"
-        android:text="캡처 길이" />
+            <TextView
+                android:id = "@+id/margin01"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/set_listview_alarm"
+                android:textSize="10dp"/>
 
-    <Button
-        android:id="@+id/setting_btn_start"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/setting_btn_capture"
-        android:text="시작" />
-</RelativeLayout>
+            <TextView
+                android:id="@+id/set_text_caplength"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/margin01"
+                android:text="녹화"
+                android:gravity="center"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:id="@+id/set_layout_capseek"
+                android:layout_below="@+id/set_text_caplength"
+                android:background="@color/colorBackground"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:orientation="vertical">
+
+                    <SeekBar
+                        android:id="@+id/set_seekbar_caplength"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:layout_marginLeft="10dp"
+                        android:max = "9"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginLeft="20dp"
+                        android:text="충돌 시, 사고 전후를 저장할 녹화 시간입니다."
+                        android:textSize="15dp"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/set_text_capscore"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    android:textSize="20dp"
+                    android:textColor="@color/colorAccent"
+                    android:textAlignment="gravity"
+                    android:gravity="right"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="15dp" />
+
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/set_listview_caplength"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBackground"
+                android:layout_below="@+id/set_layout_capseek" />
+
+            <TextView
+                android:id = "@+id/margin02"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/set_listview_caplength"
+                android:textSize="10dp"/>
+
+            <TextView
+                android:id="@+id/set_text_resolution"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/margin02"
+                android:text="해상도"
+                android:gravity="center"
+                android:textSize="20dp" />
+
+            <ListView
+                android:id="@+id/set_listview_resolution"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@color/colorBackground"
+                android:layout_below="@+id/set_text_resolution" />
+
+            <TextView
+                android:id="@+id/set_text_sensitivity"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/margin03"
+                android:text="충격 민감도"
+                android:gravity="center"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:id="@+id/set_layout_sensiseek"
+                android:layout_below="@+id/set_text_sensitivity"
+                android:background="@color/colorBackground"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:orientation="vertical">
+
+                    <SeekBar
+                        android:id="@+id/set_seekbar_sensitivity"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:layout_marginLeft="10dp"
+                        android:max = "9"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginLeft="20dp"
+                        android:text="해당 민감도 이상 충격이 가해질 경우 충돌로 판단합니다."
+                        android:textSize="15dp"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/set_text_sensiscore"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="20dp"
+                    android:textAlignment="gravity"
+                    android:gravity="right"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="15dp"/>
+
+            </LinearLayout>
+
+
+            <ListView
+                android:id="@+id/set_listview_sensitivity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@color/colorBackground"
+                android:layout_below="@+id/set_layout_sensiseek" />
+
+            <TextView
+                android:id = "@+id/margin03"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/set_listview_resolution"
+                android:textSize="10dp"/>
+
+            <TextView
+                android:id="@+id/set_text_standard"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/margin04"
+                android:text="기준점"
+                android:gravity="center"
+                android:textSize="20dp" />
+
+            <ListView
+                android:id="@+id/set_listview_standard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@color/colorBackground"
+                android:layout_below="@+id/set_text_standard" />
+
+            <TextView
+                android:id = "@+id/margin04"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/set_listview_sensitivity"
+                android:textSize="10dp"/>
+
+            <TextView
+                android:id = "@+id/margin05"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/set_listview_standard"
+                android:textSize="10dp"/>
+
+            <TextView
+                android:id="@+id/set_text_record"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/margin05"
+                android:text="기록"
+                android:gravity="center"
+                android:textSize="20dp" />
+
+            <ListView
+                android:id="@+id/set_listview_record"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@color/colorBackground"
+                android:layout_below="@+id/set_text_record" />
+        </RelativeLayout>
+    </ScrollView>
+
+</LinearLayout>
