--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,13 +22,13 @@
     </style>
 
     <!-- Popup Activity -->
-<!--    <style name = "Theme.AppCompat.Translucent" parent="AppTheme">
+        <style name = "Theme.AppCompat.Translucent" parent="AppTheme">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.InputMethod</item>
         <item name="android:background">#4D000000</item>
         <item name="windowNoTitle">true</item>
-    </style>-->
+    </style>
 
 </resources>
