--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -3,33 +3,49 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/alarm_text_item"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Alarm Item List"
-        android:textSize="20dp"
-        android:textColor="@color/colorTextDark"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"/>
+        android:background="@color/colorBackground"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/alarm_text_itemdesc"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:textSize="15dp"
-        android:layout_below="@+id/alarm_text_item"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.15"
+            android:orientation="vertical">
 
-    <CheckBox
-        android:id="@+id/alarm_chk_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
-        android:paddingRight="30dp"/>
+            <TextView
+                android:id="@+id/alarm_text_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:text="Alarm Item List"
+                android:textColor="@color/colorTextDark"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/alarm_text_itemdesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:text="Description"
+                android:textSize="15dp" />
+
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/alarm_chk_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
