--- a/app/src/main/res/layout/capture_item.xml
+++ b/app/src/main/res/layout/capture_item.xml
@@ -3,24 +3,33 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/capture_text_item"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Capture Item List"
-        android:textSize="20dp"
-        android:textColor="@color/colorTextDark"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"/>
+        android:background="@color/colorBackground"
+        android:orientation="horizontal">
 
-    <CheckBox
-        android:id="@+id/capture_chk_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:paddingRight="30dp"/>
+        <TextView
+            android:id="@+id/capture_text_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Capture Item List"
+            android:textSize="18dp"
+            android:layout_weight="0.15"
+            android:textColor="@color/colorTextDark"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="15dp"/>
+
+        <CheckBox
+            android:id="@+id/capture_chk_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
