--- a/app/src/main/res/layout/setting_main.xml
+++ b/app/src/main/res/layout/setting_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:background="@color/colorBackgroundDark"
-        android:scrollbars="vertical">
+        android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorBackground"
+                android:scrollbars="none"
                 android:layout_below="@+id/set_text_alarm" />
 
             <TextView
@@ -60,22 +61,21 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.2"
+                    android:layout_weight="0.15"
                     android:orientation="vertical">
 
                     <SeekBar
                         android:id="@+id/set_seekbar_caplength"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.4"
                         android:layout_marginLeft="10dp"
                         android:max = "9"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:layout_marginTop="-10dp"
+                        android:layout_weight="0.6"
                         android:layout_marginLeft="20dp"
                         android:text="충돌 시, 사고 전후를 저장할 녹화 시간입니다."
                         android:textSize="15dp"/>
@@ -86,13 +86,13 @@
                     android:id="@+id/set_text_capscore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.8"
-                    android:textSize="20dp"
+                    android:layout_weight="0.7"
+                    android:textSize="15dp"
                     android:textColor="@color/colorAccent"
                     android:textAlignment="gravity"
                     android:gravity="right"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="15dp" />
+                    android:layout_marginRight="20dp" />
 
             </LinearLayout>
 
@@ -123,7 +123,6 @@
                 android:id="@+id/set_listview_resolution"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:background="@color/colorBackground"
                 android:layout_below="@+id/set_text_resolution" />
 
@@ -147,22 +146,21 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.2"
+                    android:layout_weight="0.15"
                     android:orientation="vertical">
 
                     <SeekBar
                         android:id="@+id/set_seekbar_sensitivity"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.4"
                         android:layout_marginLeft="10dp"
                         android:max = "9"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:layout_marginTop="-10dp"
+                        android:layout_weight="0.6"
                         android:layout_marginLeft="20dp"
                         android:text="해당 민감도 이상 충격이 가해질 경우 충돌로 판단합니다."
                         android:textSize="15dp"/>
@@ -173,22 +171,20 @@
                     android:id="@+id/set_text_sensiscore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.8"
+                    android:layout_weight="0.7"
                     android:textColor="@color/colorAccent"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:textAlignment="gravity"
                     android:gravity="right"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="15dp"/>
+                    android:layout_marginRight="20dp"/>
 
             </LinearLayout>
-
 
             <ListView
                 android:id="@+id/set_listview_sensitivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:background="@color/colorBackground"
                 android:layout_below="@+id/set_layout_sensiseek" />
 
@@ -212,7 +208,6 @@
                 android:id="@+id/set_listview_standard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:background="@color/colorBackground"
                 android:layout_below="@+id/set_text_standard" />
 
