--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF8040</color>
-    <color name="colorPrimaryDark">#FF8040</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff5050</color>
+    <color name="colorPrimaryDark">#eb5050</color>
+    <color name="colorAccent">#ffcc00</color>
     <color name="colorBackground">#FFFFFF</color>
-    <color name="colorBackgroundDark">#f0f0f0</color>
+    <color name="colorBackgroundDark">#ebebeb</color>
     <color name="colorTextDark">#000000</color>
 
+    <!--6699ff-->
+    <!--주황 FF8040-->
 <!--    <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>-->
