--- a/app/src/main/res/layout/sensitivity_test.xml
+++ b/app/src/main/res/layout/sensitivity_test.xml
@@ -17,14 +17,15 @@
             android:text="민감도 테스트"
             android:gravity="center"
             android:textSize="20dp"
-            android:background="@color/colorBackgroundDark"/>
+            android:textColor="@color/colorBackground"
+            android:background="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/sensitivetest_text_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorPrimary"
             android:gravity="center"
             android:textSize="30dp" />
 
