--- a/app/src/main/res/layout/warning_item.xml
+++ b/app/src/main/res/layout/warning_item.xml
@@ -13,7 +13,7 @@
             android:id="@+id/warning_linear_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.15"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -44,8 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"/>
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
