--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <!-- Splash theme. -->
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash</item>
+        <!--<item name="android:windowBackground">@drawable/splash</item>-->
     </style>
 
     <!-- Popup Activity -->
