--- a/app/src/main/res/layout/record_drive.xml
+++ b/app/src/main/res/layout/record_drive.xml
@@ -9,113 +9,134 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
-    <com.github.mikephil.charting.charts.BarChart
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:layout_marginTop="15dp"
-        android:id="@+id/recorddrive_barchart"
-        android:background="@color/colorBackground"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.7"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:id = "@+id/recorddrive_layout_score">
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/recorddrive_text_crashscore"
+            <com.github.mikephil.charting.charts.BarChart
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="충돌: 0" />
+                android:layout_height="400dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/recorddrive_barchart"
+                android:background="@color/colorBackground"/>
 
-            <TextView
-                android:id="@+id/recorddrive_text_signalscore"
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="신호위반: 0" />
+                android:layout_height="400dp"
+                android:src="@drawable/logo"/>
 
-            <TextView
-                android:id="@+id/recorddrive_text_linescore"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="차선침범: 0" />
+                android:layout_height="180dp"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:id = "@+id/recorddrive_layout_score">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/recorddrive_text_crashscore"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/border"
+                        android:text="충돌: 0" />
+
+                    <TextView
+                        android:id="@+id/recorddrive_text_signalscore"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/border"
+                        android:text="신호위반: 0" />
+
+                    <TextView
+                        android:id="@+id/recorddrive_text_linescore"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/border"
+                        android:text="차선침범: 0" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="1">
+
+                    <!--            <TextView
+                                    android:id="@+id/recorddrive_text_sleepscore"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:gravity="center"
+                                    android:background="@drawable/border"
+                                    android:text="졸음: 0" />-->
+
+                    <TextView
+                        android:id="@+id/recorddrive_text_distancescore"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/border"
+                        android:text="차간 거리: 0" />
+
+                    <TextView
+                        android:id="@+id/recorddrive_text_attentionscore"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/border"
+                        android:text="신호 부주의: 0" />
+
+                    <TextView
+                        android:id="@+id/recorddrive_text_cutinscore"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/border"
+                        android:text="끼어들기: 0" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/recorddrive_text_totalscore"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="@drawable/border"
+                    android:text="총 점수: 0"/>
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
 
-<!--            <TextView
-                android:id="@+id/recorddrive_text_sleepscore"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="졸음: 0" />-->
+    </ScrollView>
 
-            <TextView
-                android:id="@+id/recorddrive_text_distancescore"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="차간 거리: 0" />
-
-            <TextView
-                android:id="@+id/recorddrive_text_attentionscore"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="신호 부주의: 0" />
-
-            <TextView
-                android:id="@+id/recorddrive_text_cutinscore"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/border"
-                android:text="끼어들기: 0" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/recorddrive_text_totalscore"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:background="@drawable/border"
-            android:text="총 점수: 0"/>
-
-
-   </LinearLayout>
 
 
 
