--- a/app/src/main/res/layout/record_log_content.xml
+++ b/app/src/main/res/layout/record_log_content.xml
@@ -9,8 +9,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_weight="0.5"
         android:text="7:30:28"
+        android:layout_gravity="center_vertical"
         android:textSize="15dp"/>
 
     <TextView
@@ -19,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_weight="0.3"
         android:textAlignment="center"
         android:textSize="15dp" />
