--- a/app/src/main/res/layout/record_log_date.xml
+++ b/app/src/main/res/layout/record_log_date.xml
@@ -6,10 +6,12 @@
     <TextView
         android:id = "@+id/record_log_date"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@color/colorTextDark"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:textSize="18dp"/>
 
 </LinearLayout>
